# kenya-energy-pipeline

./: .bruin.yml  .gitignore  Makefile  README.md  pipeline.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/analytics/: mart_capacity_trend.sql  mart_energy_kpis.sql  mart_generation_by_source.sql  mart_geo_infrastructure.sql  mart_geo_map_lines.py  mart_geo_map_substations.py  mart_renewable_mix.sql
assets/ingestion/: raw_ember_generation.py  raw_energydata_geo.py  raw_irena_capacity.py  raw_owid_energy.py
assets/staging/: stg_ember_generation.sql  stg_energy_unified.py  stg_irena_capacity.sql  stg_owid_energy.sql  stg_source_categories.sql
dashboard/: .gitignore  evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: capacity.md  geo-infrastructure.md  index.md  kpis.md  sources.md
dashboard/sources/kenya_energy/: capacity_trend.sql  connection.options.yaml  connection.yaml  energy_kpis.sql  generation_by_source.sql  geo_infrastructure.sql  geo_map_substations.sql  renewable_mix.sql
dashboard/static/: kenya_infrastructure.geojson  map.html
scripts/: export_geo_data.py
seeds/: source_categories.csv
tests/: test_ingestion.py  test_marts.py  test_staging.py
